<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Teacher">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvUserNameTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginLeft="12dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etSubjectTeacher"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:hint="@string/subject"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etMessageTeacher"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="05dp"
        android:hint="@string/message"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnSendTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="center"
        android:layout_marginBottom="180dp"
        android:layout_marginTop="16dp"/>



</LinearLayout>