<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageContent"
    android:layout_margin="16dp"

    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subjectUI"
        android:textSize="36dp"
        android:layout_marginTop="32dp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/tvSubjectMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacherMsg"
        android:textSize="36dp"
        android:layout_marginTop="32dp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/tvTeacherMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messageUI"
        android:layout_marginTop="100dp"
        android:textSize="32dp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/tvContentMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textSize="24sp"/>


</LinearLayout>