<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:layout_weight="30"
        android:text="@string/register_form"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="30"
        android:gravity="center">

        <EditText
            android:id="@+id/etUserNameReg"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/etPasswordReg"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="Password"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbTeacherReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/teacher"
            android:textAllCaps="false" />

        <CheckBox
            android:id="@+id/cbStudentReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="Student"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnRegisterReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/register"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>